New Crowdin updates (#369)
* New translations en.json (Turkish)
[ci skip]

* New translations en.json (French)
[ci skip]

* New translations en.json (Czech)
[ci skip]

* New translations en.json (German)
[ci skip]

* New translations en.json (Italian)
[ci skip]

* New translations en.json (Japanese)
[ci skip]

* New translations en.json (Russian)
[ci skip]

* New translations en.json (Swedish)
[ci skip]

* New translations en.json (Portuguese, Brazilian)
[ci skip]

* New translations en.json (Hebrew, Int)
[ci skip]

* Update source file en.json
[ci skip]

* New translations en.json (Hebrew, Int)
[ci skip]

* New translations en.json (French)
[ci skip]

* New translations en.json (English, United Kingdom)
[ci skip]

* New translations en.json (LOLCAT)
[ci skip]

* Update source file en.json
[ci skip]

--- a/src/lang/locale/fr.json
+++ b/src/lang/locale/fr.json
@@ -39,7 +39,9 @@
         },
         "Sections": {
             "areasTitle": "Zones",
-            "mapsTitle": "Cartes"
+            "mapsTitle": "Cartes",
+            "pleaseSelectLabel": "Vous semblez perdu, veuillez sélectionner un critère ou vous pouvez ",
+            "barrelRoll": "faîtes un tonneau"
         }
     },
     "StreetView": {
