--- a/src/lang/locale/lol.json
+++ b/src/lang/locale/lol.json
@@ -1,28 +1,28 @@
 {
     "Home": {
-        "placeVisited": "0 place visited | 1 place visited | {count} places visited",
-        "historyBtn": "歴史",
-        "about": "このサイトについて",
+        "placeVisited": "0 visited place | 1 visited place | {count} visited places",
+        "historyBtn": "HISTORY",
+        "about": "ABOUT",
         "searchBar": {
-            "customLoaded": "カスタムマップが読み込まれました",
-            "enterCity": "都市名、州や県、国名を入力してください"
+            "customLoaded": "Custom map has been loaded",
+            "enterCity": "Enter city, state or country"
         },
         "aboutDescriptions": {
-            "1": "Geoguess は無料で気軽に遊べる地図を使ったゲームです。        プレーヤーは5ラウンドでランダムに出された場所の正確な場所を推測して競います。        友達と遊ぶ時は最初に部屋を作る人が部屋の名前を決めて部屋を作り、他の人が部屋に入るだけで一緒に遊ぶことができます。",
-            "2": "このゲームは以下からフォークされました "
+            "1": "Geoguess is a free and lazy geoguess game with no ads.                  Players compete how close the player can guess random locations in five rounds.                 You can share the score with other people via social media like Facebook or Twitter.                 You can play multiplayer games with your friends up to five friends.                  The first player creates a room and decides the room size. Other players type the same room name as the first player created and the game will start.",
+            "2": "This game was forked from "
         },
-        "customMap": "カスタムマップ",
+        "customMap": "CUSTOMS MAP",
         "customMapDescriptions": {
-            "1": "検索バーで都市、都道府県、国にランダムな場所を制限できます。",
-            "2": "マルチプレイヤーでは、最初のプレイヤーが場所を修正します。",
-            "3": "さらに、あなたはあなたの習慣地図を作ることができます ",
-            "4": "ファイル",
-            "5": "以下のボタンでGeoJsonマップの内容を挿入します:",
-            "6": "カスタムマップ選択: "
+            "1": "You can limit random locations to cities, states, or countries with the search bar.",
+            "2": "In the multiplayer, the first player fixes the location.",
+            "3": "Furthermore, you can make your custom map with ",
+            "4": "file.",
+            "5": "Insert the content of the GeoJson map with the button :",
+            "6": "Customs Map selection : "
         },
-        "limitation": "制限",
-        "limitationDescription": "地図とストリートビューを表示させるのにお金がかかるため制限をかけています。        1日の制限を超えると地図が正しくロードされなくなります。         制限は太平洋標準時での深夜にリセットされます。        このサイトはオープンソースなので制限なく遊びたい方は自分でゲームをセットアップすることもできます。",
-        "play": "プレイ",
+        "limitation": "LIMITATION",
+        "limitationDescription": "Currently I set quotas per day so the cost to run this game can't get too high.             If the map doesn't load, it means the quota has been exceeded on the day.             It will reset at midnight Pacific Time. Sorry for the inconvenience.             This game is open source so you can build your own game server and play this game unlimitedly.",
+        "play": "Play",
         "streamerModeActivate": "Streamer mode activate",
         "streamerModeDetails": "URLs and room names are hidden",
         "mapSavedAlert": {
@@ -46,47 +46,47 @@
     },
     "StreetView": {
         "nearby": {
-            "title": "近くの位置",
-            "message": "残念ながら、定義された場所にランダムな位置を見つけることができませんでした。しかし、私たちは近くに見つけました 😉"
+            "title": "Nearby Position",
+            "message": "Unfortunately, we were unable to find a random position in the defined location. However, we have found one nearby 😉"
         },
-        "waitForOtherPlayers": "他のプレーヤーを待っています...",
-        "redirectToHomePage": "ホーム画面にリダイレクトします...",
-        "exitGame": "ゲームを強制終了しました。5秒後にリダイレクトします...",
-        "waitForOtherPlayersToFinish": "他のプレーヤーが終了するのを待っています...",
+        "waitForOtherPlayers": "Waiting for other players...",
+        "redirectToHomePage": "Redirecting to Home Page...",
+        "exitGame": "You are forced to exit the game. Redirecting to home page after 5 seconds...",
+        "waitForOtherPlayersToFinish": "Waiting for other players to finish the game...",
         "confirmExit": "Are you sure to leave the current game? This will abort the game!",
         "countdownAlert": "Countdown started : {count} second remaining | Countdown started : {count} seconds remaining"
     },
     "Maps": {
-        "makeGuess": "推測する",
-        "guess": "決定",
-        "nextRound": "進む",
-        "viewSummary": "結果を見る",
-        "exit": "終了する",
-        "reset": "リセット",
-        "playAgain": "もう一度遊ぶ",
+        "makeGuess": "MAKE GUESS",
+        "guess": "GUESS",
+        "nextRound": "NEXT ROUND",
+        "viewSummary": "VIEW SUMMARY",
+        "exit": "EXIT",
+        "reset": "RESET",
+        "playAgain": "PLAY AGAIN",
         "infoWindow": {
-            "Distance": "距離",
-            "Points": "ポイント"
+            "Distance": "Distance",
+            "Points": "Points"
         }
     },
     "Header": {
-        "language": "言語",
-        "about": "このサイトについて",
-        "limitation": "制限",
-        "contact": "お問い合わせ"
+        "language": "Language",
+        "about": "About",
+        "limitation": "Limitation",
+        "contact": "Contact"
     },
     "HeaderGame": {
-        "room": "ルーム",
-        "round": "ラウンド",
-        "distance": "距離",
-        "kmaway": "{value} km離れた",
-        "score": "スコア"
+        "room": "ROOM",
+        "round": "ROUND",
+        "distance": "DISTANCE",
+        "kmaway": "{value} km away",
+        "score": "SCORE"
     },
-    "next": "進む",
-    "cancel": "キャンセル",
+    "next": "NEXT",
+    "cancel": "CANCEL",
     "DialogCustomMap": {
-        "title": "カスタムマップ",
-        "invalid": "無効なGeoJSON",
+        "title": "Custom Map",
+        "invalid": "Invalid GeoJSON",
         "text": "Text",
         "url": "Url",
         "file": "File",
@@ -117,11 +117,11 @@
         "total": "Total"
     },
     "DialogRoom": {
-        "singlePlayer": "一人で遊ぶ",
-        "withFriends": "友達と遊ぶ",
-        "invalidRoomName": "無効な名前です。別の名前を入力して下さい。",
-        "inProgress": "最初のプレーヤーが部屋を作っています。再度試して下さい。",
-        "roomIsFull": "この部屋は既に満員です。",
+        "singlePlayer": "Single Player",
+        "withFriends": "With Friends",
+        "invalidRoomName": "Invalid name. Please try another.",
+        "inProgress": "The first player is creating the room right now. Please wait and try again.",
+        "roomIsFull": "This room is already full. Please try another.",
         "alreadyStarted": "This room has aldready started.  Please try another."
     },
     "CardRoomName": {
@@ -134,11 +134,11 @@
         "players": "1 player | {count} players"
     },
     "CardRoomSize": {
-        "title": "部屋の人数を選択して下さい。"
+        "title": "Set a room size."
     },
     "CardRoomTime": {
-        "title": "1ラウンドの制限時間を選択して下さい。",
-        "infinite": "無制限"
+        "title": "Set a time limit.",
+        "infinite": "Infinite"
     },
     "CardRoomMap": {
         "title": "Define your map",
@@ -178,7 +178,7 @@
     },
     "Footer": {
         "under": "under",
-        "privacyPolicy": "プライバシーポリシー"
+        "privacyPolicy": "Privacy Policy"
     },
     "urlCopied": "Url copied",
     "DetailsMap": {
