New Crowdin updates (#384)
* New translations en.json (English, United Kingdom)
[ci skip]

* New translations en.json (French)
[ci skip]

* New translations en.json (Czech)
[ci skip]

* New translations en.json (German)
[ci skip]

* New translations en.json (Italian)
[ci skip]

* New translations en.json (Japanese)
[ci skip]

* New translations en.json (Russian)
[ci skip]

* New translations en.json (Swedish)
[ci skip]

* New translations en.json (Turkish)
[ci skip]

* New translations en.json (Portuguese, Brazilian)
[ci skip]

* New translations en.json (Hebrew, Int)
[ci skip]

* Update source file en.json
[ci skip]

* New translations en.json (French)
[ci skip]

* New translations en.json (German)
[ci skip]

* New translations en.json (German)
[ci skip]

--- a/src/lang/locale/fr.json
+++ b/src/lang/locale/fr.json
@@ -2,7 +2,9 @@
     "Home": {
         "placeVisited": "0 lieu visité | 1 lieu visité | {count} lieux visités",
         "historyBtn": "Historique",
+        "medalsBtn": "MEDAILLES",
         "about": "A PROPOS",
+        "createMap": "Créer une carte",
         "searchBar": {
             "customLoaded": "Une carte personnalisée a été chargée",
             "enterCity": "Saisissez une ville, une région ou un pays"
@@ -31,7 +33,13 @@
         },
         "HomeCard": {
             "edit": "Éditer",
-            "delete": "Supprimer"
+            "delete": "Supprimer",
+            "medal": {
+                "platinum": "Platine",
+                "gold": "Or",
+                "silver": "Argent",
+                "bronze": "Bronze"
+            }
         },
         "HomeCardMode": {
             "map": "Carte",
@@ -105,6 +113,7 @@
         "title": "Historique",
         "date": "Date",
         "mode": "Mode",
+        "mapName": "Nom de la carte",
         "time": "Temps",
         "distance": "Distance",
         "points": "Points",
