--- a/src/lang/locale/de.json
+++ b/src/lang/locale/de.json
@@ -2,7 +2,9 @@
     "Home": {
         "placeVisited": "0 besuchte Orte | 1 besuchte Stelle | {count} besuchte Orte",
         "historyBtn": "HISTORIE",
+        "medalsBtn": "MEDAILLEN",
         "about": "ÜBER",
+        "createMap": "Karte erstellen",
         "searchBar": {
             "customLoaded": "Eine benutzerdefinierte Karte wurde geladen",
             "enterCity": "Geben Sie eine Stadt, Region oder ein Land ein"
@@ -31,7 +33,13 @@
         },
         "HomeCard": {
             "edit": "Bearbeiten",
-            "delete": "Löschen"
+            "delete": "Löschen",
+            "medal": {
+                "platinum": "Platin",
+                "gold": "Gold",
+                "silver": "Silber",
+                "bronze": "Bronze"
+            }
         },
         "HomeCardMode": {
             "map": "Map",
@@ -40,8 +48,8 @@
         "Sections": {
             "areasTitle": "Areas",
             "mapsTitle": "Maps",
-            "pleaseSelectLabel": "You seems lost, please select a type or you can ",
-            "barrelRoll": "do a barrel roll"
+            "pleaseSelectLabel": "Sie scheinen verloren zu sein, bitte wählen Sie einen Typ oder Sie können ",
+            "barrelRoll": "mache eine Fassrolle"
         }
     },
     "StreetView": {
@@ -105,6 +113,7 @@
         "title": "Historie",
         "date": "Datum",
         "mode": "Modus",
+        "mapName": "Kartenname",
         "time": "Zeit",
         "distance": "Distanz",
         "points": "Punkte",
