New Crowdin updates (#443)
* New translations en.json (Russian)
[ci skip]

* New translations en.json (French)
[ci skip]

* New translations en.json (Spanish)
[ci skip]

* New translations en.json (Czech)
[ci skip]

* New translations en.json (German)
[ci skip]

* New translations en.json (Italian)
[ci skip]

* New translations en.json (Japanese)
[ci skip]

* New translations en.json (Swedish)
[ci skip]

* New translations en.json (Turkish)
[ci skip]

* New translations en.json (Portuguese, Brazilian)
[ci skip]

* New translations en.json (English, United Kingdom)
[ci skip]

* New translations en.json (Hebrew, Int)
[ci skip]

* Update source file en.json
[ci skip]

* New translations en.json (Italian)
[ci skip]

* New translations en.json (Russian)
[ci skip]

* New translations en.json (French)
[ci skip]

* New translations en.json (Spanish)
[ci skip]

* New translations en.json (Czech)
[ci skip]

* New translations en.json (German)
[ci skip]

* New translations en.json (Italian)
[ci skip]

* New translations en.json (Japanese)
[ci skip]

* New translations en.json (Swedish)
[ci skip]

* New translations en.json (Turkish)
[ci skip]

* New translations en.json (Portuguese, Brazilian)
[ci skip]

* New translations en.json (English, United Kingdom)
[ci skip]

* New translations en.json (Hebrew, Int)
[ci skip]

* Update source file en.json
[ci skip]

--- a/src/lang/locale/fr.json
+++ b/src/lang/locale/fr.json
@@ -152,7 +152,8 @@
     "CardRoomMap": {
         "title": "Définissez votre carte",
         "loadBtn": "Charger la carte",
-        "reset": "Réinitialiser"
+        "reset": "Réinitialiser",
+        "cantPlayGeoJson": "GeoJSON invalide, vous devez avoir plus de 5 positions."
     },
     "CardRoomSettings": {
         "title": "Paramètre de la partie",
@@ -170,7 +171,8 @@
             "time": "temps"
         },
         "selectAreas": "Sélectionner les zones",
-        "moreSettings": "Paramètres avancés"
+        "moreSettings": "Paramètres avancés",
+        "optimiseStreetView": "StreetView Optimiser (uniquement officiel)"
     },
     "CardRoomDifficulty": {
         "title": "Saisir la difficulté.",
