--- a/src/lang/locale/he.json
+++ b/src/lang/locale/he.json
@@ -152,7 +152,8 @@
     "CardRoomMap": {
         "title": "הגדר את המפה שלך",
         "loadBtn": "טען מפה",
-        "reset": "אתחל"
+        "reset": "אתחל",
+        "cantPlayGeoJson": "Invalid GeoJSON, you need to have more than 5 positions."
     },
     "CardRoomSettings": {
         "title": "הגדרות משחק",
@@ -170,7 +171,8 @@
             "time": "זמן"
         },
         "selectAreas": "בחר אזורים",
-        "moreSettings": "הגדרות נוספות"
+        "moreSettings": "הגדרות נוספות",
+        "optimiseStreetView": "StreetView Optimize (only official)"
     },
     "CardRoomDifficulty": {
         "title": "בחר רמת קושי.",
