--- a/src/lang/locale/de.json
+++ b/src/lang/locale/de.json
@@ -152,7 +152,8 @@
     "CardRoomMap": {
         "title": "Gestalte deine Karte",
         "loadBtn": "Karte laden",
-        "reset": "Reset"
+        "reset": "Reset",
+        "cantPlayGeoJson": "Invalid GeoJSON, you need to have more than 5 positions."
     },
     "CardRoomSettings": {
         "title": "Spieleinstellungen",
@@ -170,7 +171,8 @@
             "time": "Zeit"
         },
         "selectAreas": "Select Areas",
-        "moreSettings": "More settings"
+        "moreSettings": "More settings",
+        "optimiseStreetView": "StreetView Optimize (only official)"
     },
     "CardRoomDifficulty": {
         "title": "Lege den Schwierigkeitsgrad fest.",
