--- a/src/lang/locale/es.json
+++ b/src/lang/locale/es.json
@@ -152,7 +152,8 @@
     "CardRoomMap": {
         "title": "Definir mapa",
         "loadBtn": "Cargar MAPA",
-        "reset": "Reiniciar"
+        "reset": "Reiniciar",
+        "cantPlayGeoJson": "Invalid GeoJSON, you need to have more than 5 positions."
     },
     "CardRoomSettings": {
         "title": "Opciones de partida",
@@ -170,7 +171,8 @@
             "time": "tiempo"
         },
         "selectAreas": "Seleccionar Áreas",
-        "moreSettings": "Opciones avanzadas"
+        "moreSettings": "Opciones avanzadas",
+        "optimiseStreetView": "StreetView Optimize (only official)"
     },
     "CardRoomDifficulty": {
         "title": "Establecer nivel de dificultad.",
