initial dark mode

--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -1,6 +1,6 @@
 {
   "Home": {
-    "placeVisited": "0 visited place | 1 visited place | {count} visited places",
+    "placeVisited": "0 visited places | 1 visited place | {count} visited places",
     "historyBtn": "HISTORY",
     "medalsBtn": "MEDALS",
     "about": "ABOUT",
