--- a/src/lang/locale/ja.json
+++ b/src/lang/locale/ja.json
@@ -132,7 +132,7 @@
     "invalidRoomName": "無効な名前です。別の名前を入力して下さい。",
     "inProgress": "最初のプレーヤーが部屋を作っています。再度試して下さい。",
     "roomIsFull": "この部屋は既に満員です。",
-    "alreadyStarted": "This room has aldready started.  Please try another."
+    "alreadyStarted": "This room has already started.  Please try another."
   },
   "CardRoomName": {
     "title": "Type a room name to create a new room or join a existing room"
