--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -165,6 +165,8 @@
     "allowMove": "Allow Move",
     "allowZoom": "Allow Zoom",
     "allowPan": "Allow Pan",
+    "guessedLeaderboard" : "Display whether players have guessed",
+    "scoreLeaderboard" : "Display score leaderboard",
     "countDownLabel": "CountDown (seconds)",
     "scoreModeLabel": "Score formula",
     "scoreModes": {
