--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -75,6 +75,10 @@
     "infoWindow": {
       "Distance": "Distance",
       "Points": "Points"
+    },
+    "leaderboard": {
+      "notGuessed": "Not Guessed",
+      "guessed": "Guessed"
     }
   },
   "Header": {
