[FEAT] Dark theme + Other enhancements  (#572)
* initial dark mode

* Fix mobile navbar

* fixes

* inline dark theme

* did the thing

* Update settings.store.js

* Remember pin status

* set pinActive via LocalStorage variable directly

* Update CardRoomPlayerName.vue

* Update settings.store.js

* Dark Google map

* Environment variable for default dark mode

Default: light

* Fix missing function parameter on dialog enter

* Fix country borders

* Format inconsistent JSON

* Resolve suggestions

I've removed VUE_APP_DEFAULT_THEME env in place of checking the browser's current theme like suggested, and fixed other problems.

* Fix spelling mistake

Co-authored-by: Bilel Jegham <BilelJegham@users.noreply.github.com>

--- a/src/lang/locale/en.json
+++ b/src/lang/locale/en.json
@@ -1,6 +1,6 @@
 {
   "Home": {
-    "placeVisited": "0 visited place | 1 visited place | {count} visited places",
+    "placeVisited": "0 visited places | 1 visited place | {count} visited places",
     "historyBtn": "HISTORY",
     "medalsBtn": "MEDALS",
     "about": "ABOUT",
@@ -132,7 +132,7 @@
     "invalidRoomName": "Invalid name. Please try another.",
     "inProgress": "The first player is creating the room right now. Please wait and try again.",
     "roomIsFull": "This room is already full. Please try another.",
-    "alreadyStarted": "This room has aldready started.  Please try another."
+    "alreadyStarted": "This room has already started.  Please try another."
   },
   "CardRoomName": {
     "title": "Type a room name to create a new room or join a existing room"
