New Crowdin updates (#587)
* New translations en.json (Swedish)
[ci skip]

* New translations en.json (German)
[ci skip]

* New translations en.json (Swedish)
[ci skip]

* New translations en.json (French)
[ci skip]

* New translations en.json (Spanish)
[ci skip]

* New translations en.json (Bulgarian)
[ci skip]

* New translations en.json (Czech)
[ci skip]

* New translations en.json (Italian)
[ci skip]

* New translations en.json (Japanese)
[ci skip]

* New translations en.json (Polish)
[ci skip]

* New translations en.json (Russian)
[ci skip]

* New translations en.json (Turkish)
[ci skip]

* New translations en.json (Chinese Simplified)
[ci skip]

* New translations en.json (Portuguese, Brazilian)
[ci skip]

* New translations en.json (Hebrew, Int)
[ci skip]

* New translations en.json (German)
[ci skip]

* New translations en.json (Swedish)
[ci skip]

* New translations en.json (French)
[ci skip]

* New translations en.json (Spanish)
[ci skip]

* New translations en.json (Bulgarian)
[ci skip]

* New translations en.json (Italian)
[ci skip]

* New translations en.json (Polish)
[ci skip]

* New translations en.json (Russian)
[ci skip]

* New translations en.json (Turkish)
[ci skip]

* New translations en.json (Chinese Simplified)
[ci skip]

* New translations en.json (Portuguese, Brazilian)
[ci skip]

* New translations en.json (Hebrew, Int)
[ci skip]

* New translations en.json (French)
[ci skip]

--- a/src/lang/locale/de.json
+++ b/src/lang/locale/de.json
@@ -132,7 +132,7 @@
     "invalidRoomName": "Ungültiger Name. Bitte versuche einen anderen.",
     "inProgress": "Der erste Spieler erstellt den Raum. Bitte warte und versuche es erneut.",
     "roomIsFull": "Dieser Raum ist bereits voll. Versuche einen anderen.",
-    "alreadyStarted": "Dieser Raum hat bereits begonnen. Bitte versuche einen anderen."
+    "alreadyStarted": "This room has already started.  Please try another."
   },
   "CardRoomName": {
     "title": "Gebe einen Raumnamen ein, um einen neuen Raum zu erstellen, oder einem bereits existierenden Raum beizutreten"
