--- a/src/lang/locale/cs.json
+++ b/src/lang/locale/cs.json
@@ -1,6 +1,6 @@
 {
   "Home": {
-    "placeVisited": "0 place visited | 1 place visited | {count} places visited",
+    "placeVisited": "0 visited places | 1 visited place | {count} visited places",
     "historyBtn": "HISTORIE",
     "medalsBtn": "MEDALS",
     "about": "O HŘE",
